# rust-template-api

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  cargo-generate.toml  docker-compose.yml
.github/workflows/: ci.yml
proto/: Cargo.toml  build.rs
proto/src/: lib.rs  shared.proto  todo-service.proto
services/todo-service/: Cargo.toml
services/todo-service/migrations/2024-01-01-000000_create_todos/: up.sql
services/todo-service/src/: lib.rs  main.rs  model.rs  proto.rs  repository.rs  schema.rs  service.rs
services/todo-service/src/model/: todo.rs
services/todo-service/src/repository/: todo_repository.rs
services/todo-service/src/service/: todo_service.rs
services/todo-service/tests/: common.rs  integration.rs
services/todo-service/tests/repository/: todo_repository.rs
services/todo-service/tests/service/: todo_service.rs
web/: Cargo.toml
web/src/: auth.rs  main.rs  routes.rs
web/src/routes/: auth.rs  todos.rs
