[workspace]
resolver = "3"
members = ["proto", "services/todo-service", "web"]

[workspace.dependencies]
# rust-toolbox: generic diesel repository/service macros, tower request-id
# layers, axum auth/RBAC, a tonic ServiceError trait. See
# https://github.com/adrien-thebault/rust-toolbox - pin to a tag/rev once
# you've picked one; `branch = "master"` tracks its latest.
rust-toolbox = { git = "https://github.com/adrien-thebault/rust-toolbox.git", branch = "master", default-features = false }
prost = "0.14"
prost-types = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
glob = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "2.3", features = [
  "sqlite",
  "r2d2",
  "chrono",
  "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.3"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = "0.1"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.6", features = ["derive", "env"] }
dotenvy = "0.15"
chrono = "0.4"
thiserror = "2.0"
axum = "0.8"
async-trait = "0.1"
