[package]
name = "proto"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rust-toolbox = { workspace = true, features = ["sqlite"] }

[build-dependencies]
glob = { workspace = true }
tonic-prost-build = { workspace = true }
